# opencv-study

./: CMakeLists.txt
include/: face_detection.h  img_operation.h  input_output.h  rtsp_demo.h
src/: main.cpp
src/face_detection/: face_detection.cpp
src/img_operation/: color_format.cpp  drawing.cpp  filtering.cpp  shape_adjust.cpp
src/input_output/: camera.cpp  image.cpp  video.cpp
src/rtsp_demo/: rtsp_demo.cpp
